--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,12 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+.linkHover:hover {
+    box-shadow: 0px 2.5px 0px 0px #97D4A6;
+    transition: box-shadow .1s ease;
+}
+.linkFocus {
+    box-shadow: 0px 2.5px 0px 0px #97D4A6;
+    transition: box-shadow .1s ease;
+}
