Added functionality to upload profile images

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,12 @@
     box-shadow: 0px 2.5px 0px 0px #97D4A6;
     transition: box-shadow .1s ease;
 }
+
 .linkFocus {
     box-shadow: 0px 2.5px 0px 0px #97D4A6;
     transition: box-shadow .1s ease;
+}
+
+input[type="file"] {
+    display: none;
 }
