--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,13 @@
 input[type="file"] {
     display: none;
 }
+
+.rotateIcon {
+    transform: rotate(-45deg);
+    transition: transform 0.3s ease-in-out;
+}
+
+.rotateBack {
+    transform: rotate(45deg);
+    transition: transform 0.3s ease-in-out;
+}
