--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,3 +30,22 @@ input[type="file"] {
     transform: rotate(45deg);
     transition: transform 0.3s ease-in-out;
 }
+
+.tooltip {
+    display: none;
+}
+
+.tooltip-container:hover .tooltip {
+    display: block;
+    position: absolute;
+    right: 50px;
+}
+
+.artist-image:hover{
+    transform: scale(1.08);
+    cursor: pointer;
+}
+
+.artist-image {
+    transition: transform 0.3s ease-in-out;
+}
