Made the page dynamic

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@ input[type="file"] {
 
 .tooltip {
     display: none;
-    z-index : 50;
+    z-index: 50;
 }
 
 .tooltip-container:hover .tooltip {
@@ -42,11 +42,35 @@ input[type="file"] {
     right: 50px;
 }
 
-.artist-image:hover{
+.artist-image:hover {
     transform: scale(1.08);
     cursor: pointer;
 }
 
 .artist-image {
     transition: transform 0.3s ease-in-out;
+}
+
+.card {
+    position: relative;
+    transition: transform 0.3s;
+}
+
+.card-hover {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    overflow: hidden;
+    transition: height 0.4s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card:hover .card-hover {
+    height: 100%;
 }
